2008-04-18  Andreia Gaita <avidigal@novell.com> 

	* gluezilla_nsIScriptContext.h, gluezilla_nsIScriptGlobalObject.h: Add
	  eof newline
	* gluezilla.h: Fix forward declaration

2008-04-18  Andreia Gaita <avidigal@novell.com> 

	* gluezilla_nsIScriptContext.h, gluezilla_nsIScriptGlobalObject.h,
	  gluezilla2K5.vcproj: Javascript eval support: Added custom
	  nsIScriptContext and nsIScriptGlobalObject headers; the
	  xulrunner-sdk-provided ones are not frozen, not idl-generated, and
	  pull in the entire private mozilla dependencies that we can't use,
	  when what I really need is just the first call from each header
	  anyway.
	* BrowserWindow.cpp: Fix status change callback
	* Widget.cpp, Widget.h: Added EvalScript for javascript eval support.
	  Code cleanup.
	* gluezilla.cpp: Added gluezilla_evalScript for javascript eval
	  support. Code cleanup.
	* interfaces.h: New headers included for javascript eval support
	* gluezilla.h: Added gluezilla_evalScript for javascript eval support.
	  Change OnStatusChange signature to use unicode strings.

2008-04-07  Andreia Gaita <avidigal@novell.com> 

	* gluezilla.cpp, gluezilla.h: Use gluezilla_init for platform initialization
	code only, browser widget initialization code moved to createBrowserWindow.
	Fixes support of more than one embedded browser instance.

2008-03-27  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.cpp, gluezilla.h: Debug helper method change
	* Widget.cpp: Only resize the gtk widget if we're running on a platform
	that needs it.

2008-03-04  Andreia Gaita  <avidigal@novell.com>

	* gluezilla.*: fix getServiceManager to return the object directly.

2008-03-02  Andreia Gaita  <avidigal@novell.com>

	* interfaces.h: Seems xulrunner 1.9 removed some headers with defines
	that I was using to detect what type of toolkit it was running on. Removed
	the offending header from the include list, and rely on OS defines only 
	(*sigh*)
