@@ -1,3 +1,9 @@
+2008-05-20  Andreia Gaita <avidigal@novell.com> 
+
+	* BrowserWindow.cpp: Added progress and request objects from the
+	  loading events. Track progress updates.
+	* gluezilla.h: Hook up new loading and progress events
+
 2008-04-18  Andreia Gaita <avidigal@novell.com> 
 
 	* gluezilla_nsIScriptContext.h, gluezilla_nsIScriptGlobalObject.h: Add
